abgegeben